--- a/productCatalog.html
+++ b/productCatalog.html
@@ -9,7 +9,7 @@
 
     <body bgcolor="#ffe9a1">
         <center>
-            
+            <p>Hello World</p>
         </center>
     </body>
 </html>
